# serank

./: README.md  pyproject.toml  run.py
serank/: __init__.py  filmweb.py  imdb.py
tests/: __init__.py  test_serank.py
