[tool.poetry]
name = "serank"
version = "0.1.1"
description = ""
authors = ["Piotr Mazik <mazik@fev.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"
contexttimer = "^0.3.3"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
